# saas-assistant

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: API.md  Architecture and Setup Plan for a Software‑Team‑in‑a‑Box SaaS Assistant (LiteLLM + Agno + Airweave + Railway).md  Architecture and Setup Plan.md  DEPLOYMENT.md
gateway/: litellm_config.local.yaml  litellm_config.yaml  validate_agents.py
src/agents/: architect.py  base.py  critic.py  developer.py  manager.py  team.py  tester.py
src/api/: main.py
src/execution/: sandbox.py
src/memory/: airweave_client.py  mem0_client.py  session.py
src/schemas/: workflow.py
tests/: test_agents_phase3.py  test_api.py  test_sandbox.py  validate_memory.py
